--- a/ruff.toml
+++ b/ruff.toml
@@ -37,6 +37,7 @@ preview = true
 explicit-preview-rules = true
 
 [lint.per-file-ignores]
+"nftables_api/__init__.py" = ["PLC0414"]  # allow explicit re-exports / avoid conflict with F401
 "tests/*.py" = [
   "INP001", # tests do not need to be part of a package
   "S101",   # allow "assert" in test suites
