--- a/nft_http_api_server/setup.cfg
+++ b/nft_http_api_server/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = nftables_api
+name = nftables_api-server
 version = attr: nftables_api.__version__
 author = Georg Pfuetzenreuter
 author_email = georg+python@lysergic.dev
@@ -14,8 +14,4 @@ packages=find:
 python_requires = >=3.6
 
 [options.packages.find]
-exclude=
-    scripts*
-    tests*
-    *.toml
 where=.
