Align server package description
Unify capitalization with client library and align both setup
configurations.

Signed-off-by: Georg Pfuetzenreuter <mail@georg-pfuetzenreuter.net>

--- a/nft_http_api_server/pyproject.toml
+++ b/nft_http_api_server/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'nftables_api-server'
-description = 'RESTful HTTP API for nftables (server)'
+description = 'RESTful HTTP API for nftables (Server)'
 dynamic = ['license', 'readme', 'version']
 authors = [
   { name='Georg Pfuetzenreuter', email='georg+python@lysergic.dev' },
