--- a/nft_http_api_server/setup.cfg
+++ b/nft_http_api_server/setup.cfg
@@ -3,7 +3,7 @@ name = nftables_api-server
 version = attr: nftables_api.__version__
 author = Georg Pfuetzenreuter
 author_email = georg+python@lysergic.dev
-description = RESTful HTTP API for nftables
+description = RESTful HTTP API for nftables (Server)
 license = EUPL-1.2
 long_description = file: README.md, LICENSE
 
